k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-sa
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: jordan10980/frontend:v2.9
          ports:
            - containerPort: 80
